--- a/config/database.yml
+++ b/config/database.yml
@@ -20,12 +20,12 @@ development:
   database: MusicTrax_development
   pool: 5
   username: appacademy
+  host: localhost
   password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  host: localhost
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
@@ -48,7 +48,8 @@ test:
   encoding: unicode
   database: MusicTrax_test
   pool: 5
-  username: MusicTrax
+  username: appacademy
+  host: localhost
   password:
 
 production:
@@ -56,5 +57,6 @@ production:
   encoding: unicode
   database: MusicTrax_production
   pool: 5
-  username: MusicTrax
+  username: appacademy
+  host: localhost
   password:
